--- a/src/sass/theme/_theme.scss
+++ b/src/sass/theme/_theme.scss
@@ -1,4 +1,3 @@
-
 // _variables.scss
 $xl: 1440px;
 $lg: 992px;
@@ -14,8 +13,6 @@ html, body {
     box-sizing: border-box; // Ensure padding and border are included in the element's total width and height
 }
 
-
-
 .site-header {
     background-color: #333;
     color: #f5eede;
@@ -28,15 +25,11 @@ html, body {
         align-items: center;
         position: relative;
         width: 100%;
-    }
-
-    .site-header .container {
         margin: 0 !important; // Use !important to override any other styles
-        width: 100%; // Ensure it takes the full width
         max-width: 100%; // Ensure it takes the full width
         padding: 0; // Remove any default padding
     }
-    
+
     .header-logo {
         flex: 1;
         text-align: center;
@@ -55,12 +48,6 @@ html, body {
 
         @media (min-width: $md) {
             display: block;
-            .site-header .container {
-                margin: 0;
-            }
-            .header-logo {
-                text-align: left;
-            }
             ul {
                 list-style-type: none;
                 padding: 0;
@@ -185,14 +172,9 @@ html, body {
     }
 }
 
-
-
-
-
 body {
     font-family: 'Lato', sans-serif;
 }
-
 
 .home-banner-wrapper {
     position: relative;
@@ -220,11 +202,13 @@ body {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(213, 204, 184, 0.3) 75%, #D5CCB8 100%);
     pointer-events: none;
     z-index: 20;
-    @media (max-width: $md){
+
+    @media (max-width: $md) {
         height: 50%; /* Adjust height of the gradient overlay as needed */
         background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(213, 204, 184, 0.3) 5%, #D5CCB8 100%);
     }
 }
+
 .search-bar-wrapper {
     position: absolute;
     top: 50%;
@@ -235,6 +219,7 @@ body {
     z-index: 10;
     width: 100%; /* Ensure it is responsive */
     justify-content: center;
+
     @media (max-width: $md) {
         position: relative;
         display: flex;
@@ -305,7 +290,6 @@ body {
     background-color: #ff645f;
 }
 
-
 .local-barbers-background {
     background-color: #D5CCB8;
     padding: 2rem;
@@ -344,6 +328,12 @@ body {
     width: 100%;
     max-width: 600px;
     margin: 1rem 0;
+    transition: transform 0.3s ease, box-shadow 0.3s ease; // Add smooth transition
+
+    &:hover {
+        transform: translateY(-10px); // Raise the card slightly
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); // Increase the shadow
+    }
 
     img.barbershop-image {
         width: 100%;
@@ -381,11 +371,11 @@ body {
             font-size: 1rem;
         }
 
-        .status {
-            color: green;
-            font-weight: bold;
-            margin: 0.5rem 0;
-        }
+        // .status {
+        //     color: green;
+        //     font-weight: bold;
+        //     margin: 0.5rem 0;
+        // }
 
         .distance {
             color: #000;
@@ -404,7 +394,6 @@ body {
         }
     }
 }
-
 
 @media (max-width: $lg) {
     .barbershop-card {
@@ -431,8 +420,9 @@ body {
             h3, .rating, .services, .status, .distance {
                 width: 100%; // Ensure full width for each element
             }
+
             h3 {
-               font-size: 2rem; 
+                font-size: 2rem;
             }
 
             .services {
@@ -559,12 +549,6 @@ body {
     }
 }
 
-
-
-
-
-
-
 .barbershop-card .rating {
     color: gold;
     margin-top: 0.5rem;
@@ -592,7 +576,6 @@ body {
     }
 }
 
-
 .status-open {
     color: #1ECE25;
 }
@@ -612,6 +595,7 @@ body {
 .hidden {
     display: none;
 }
+
 .closing-time,
 .opening-time {
     color: black; /* Ensure this color matches your desired styling */
@@ -717,7 +701,7 @@ body {
 .footer-column h2 {
     margin-bottom: 1rem;
     color: #f5eede;
-    font-family:  'Bangers', sans-serif;
+    font-family: 'Bangers', sans-serif;
 }
 
 .footer-column p {
@@ -757,116 +741,453 @@ body {
     display: inline-block;
 }
 
-
-
 // Barbershops page
 
 .barbershops-page {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+.barbershops-page .barbershop-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; // Center the flex items
+    gap: 1rem;
+    margin: 0 auto; // Center the container
 
-    .barbershop-cards {
+    @media (min-width: $lg) {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        gap: 20px;
-        padding: 20px;
+        grid-template-columns: repeat(3, 1fr); // Default to 3 columns
+        gap: 1rem;
+        justify-items: center; // Center the items within the grid
+        margin: 0 auto; // Center the container
     }
 
-    .barbershop-card {
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        overflow: hidden;
-        background-color: white;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        transition: transform 0.3s, box-shadow 0.3s;
-        cursor: pointer; // Add this line to change the cursor to a hand on hover
-    }
-
-    .barbershop-card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    }
-
-    .barbershop-card-image {
-        width: 100%;
-        height: 200px; // Adjust height as needed
-        overflow: hidden;
-    }
-
-    .barbershop-card-image img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover; // Ensures the image covers the area
-    }
-
-    .barbershop-card-content {
-        padding: 15px;
-        text-align: center;
-    }
-
-    .barbershop-card h2 {
-        margin: 10px 0;
-        font-size: 1.5rem;
-        color: #333;
-    }
-
-    .barbershop-card p {
-        margin: 5px 0;
-        color: #666;
-    }
-
-    .rating {
-        color: gold;
-        font-size: 1.25rem;
-        margin: 5px 0;
-    }
-
-    .english-level {
-        margin: 5px 0;
-    }
-
-    .level-excellent {
-        color: #1EBBFF;
-    }
-
-    .level-good {
-        color: #1ECE25;
-    }
-
-    .level-fair {
-        color: #D7611F;
-    }
-
-    .level-poor {
-        color: #FF2B1E;
-    }
-
-    .services {
-        margin: 5px 0;
-    }
-
-    .distance {
-        margin: 5px 0;
-    }
-
-    .status {
-        margin: 5px 0;
-        font-weight: bold;
-    }
-
-    .status-open {
-        color: green;
-    }
-
-    .status-closed {
-        color: red;
-    }
-
-    .status-opening-soon,
-    .status-closing-soon {
-        color: orange;
-    }
-
-    .opening-hours {
-        margin: 5px 0;
+    @media (min-width: $xl) {
+        grid-template-columns: repeat(4, 1fr); // Use 4 columns for screens $xl and above
     }
 }
 
+.barbershops-page .barbershop-card {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    padding: 20px;
+    width: 300px;
+    text-align: center;
+    cursor: pointer;
+
+    .rating {
+        color: gold;
+        margin-top: 0.5rem;
+    }
+
+    // .status {
+    //     font-weight: bold;
+    //     margin: 10px 0;
+    // }
+    // .status-closing-soon {
+    //     color: orange; // Amber color for closing soon
+    // }
+    
+    // .status-closed {
+    //     color: red; // Red color for closed
+    // }
+    
+
+    .distance {
+        margin-top: 0.5rem;
+    }
+
+    .services {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 0.5rem;
+    }
+
+    .service {
+        padding: 0.2rem 0.6rem;
+        border-radius: 0.5rem;
+        color: white;
+        font-weight: bold;
+        background-color: #eee; /* Default color */
+    }
+
+    .service-haircuts {
+        background-color: #FF7F7F; /* Example color */
+    }
+
+    .service-trims {
+        background-color: #7FFF7F; /* Example color */
+    }
+
+    .service-shaves {
+        background-color: #7F7FFF; /* Example color */
+    }
+
+    p {
+        font-size: 1.4rem;
+    }
+
+    .english-level {
+        font-weight: bold;
+
+        &.english-excellent {
+            color: #1EBBFF;
+            font-weight: bold;
+        }
+
+        &.english-good {
+            color: #1ECE25;
+            font-weight: bold;
+        }
+
+        &.english-fair {
+            color: #D7611F;
+            font-weight: bold;
+        }
+
+        &.english-poor {
+            color: #FF2B1E;
+            font-weight: bold;
+        }
+    }
+
+    transition: transform 0.3s ease, box-shadow 0.3s ease; // Add smooth transition
+
+    &:hover {
+        transform: translateY(-10px); // Raise the card slightly
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); // Increase the shadow
+    }
+}
+.barbershop-card-link {
+    text-decoration: none;
+    color: inherit; /* Ensure the text color inherits the style from the card */
+}
+
+.barbershop-card {
+    position: relative;
+    z-index: 1;
+}
+
+
+.hidden {
+    display: none;
+}
+
+.status-open {
+    color: green;
+}
+
+.status-closed {
+    color: red;
+}
+
+.status-opening-soon {
+    color: orange;
+}
+
+.status-closing-soon {
+    color: orange;
+}
+
+.closing-time,
+.opening-time {
+    color: black; /* Ensure this color matches your desired styling */
+}
+
+
+/* Single Barbershop Page Styling */
+#single-barbershop-wrapper {
+    background-color: #D5CCB8;
+    padding: 2rem 0;
+}
+
+.entry-header {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.entry-title {
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.address {
+    font-size: 1.2rem;
+    color: #555;
+}
+
+.barbershop-images {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-bottom: 2rem;
+}
+
+.barbershop-images img {
+    width: calc(50% - 0.5rem);
+    border-radius: 10px;
+}
+
+.barbershop-info {
+    background-color: #fff;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.barbershop-info h2 {
+    font-size: 1.5rem;
+    margin-top: 1rem;
+    color: #333;
+}
+
+.barbershop-info p,
+.barbershop-info ul {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+.barbershop-info .english-level {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #1EBBFF; /* Assuming Excellent level */
+}
+
+
+/* Single Barbershop Page Styling */
+.barbershop-single .barbershop-card {
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 800px;
+    margin: 20px auto;
+}
+
+/* Header Section */
+.barbershop-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    background-color: #F7F1E0;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 1.5rem;
+}
+
+.barbershop-info-left {
+    display: flex;
+    flex-direction: column;
+    max-width: 60%;
+}
+
+.barbershop-info-left h1 {
+    font-size: 2.5rem;
+    margin: 0 0 10px;
+}
+
+.barbershop-info-left .address {
+    font-size: 1.2rem;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.barbershop-info-left .rating {
+    font-size: 1.5rem;
+    color: #FFD700;
+}
+
+.barbershop-info-right {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    max-width: 40%;
+}
+
+.barbershop-info-right h2 {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+}
+
+.barbershop-info-right .opening-hours {
+    list-style: none;
+    padding: 0;
+    font-size: 0.9rem;
+}
+
+.barbershop-info-right .opening-hours li {
+    margin-bottom: 5px;
+}
+
+.barbershop-info-right .status {
+    color: red;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+/* Details Section */
+.barbershop-details {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+}
+
+.barbershop-details .barbershop-images {
+    flex: 1 1 45%;
+    margin-bottom: 20px;
+}
+
+.barbershop-details .barbershop-images img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.barbershop-details .barbershop-info {
+    flex: 1 1 45%;
+    text-align: left;
+}
+
+.barbershop-info h2 {
+    font-size: 1.8rem;
+    margin-bottom: 0.5rem;
+}
+
+.barbershop-info .opening-hours {
+    list-style-type: none;
+    padding: 0;
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+.barbershop-info .status {
+    font-size: 1.2rem;
+    color: red;
+    font-weight: bold;
+    margin-top: 1rem;
+}
+
+/* Services Section */
+.barbershop-services {
+    margin-bottom: 2rem;
+}
+
+.barbershop-services h2 {
+    font-size: 1.8rem;
+    margin-bottom: 0.5rem;
+}
+
+.barbershop-services .services-list {
+    list-style-type: none;
+    padding: 0;
+    font-size: 1.4rem;
+}
+
+.barbershop-services .services-list li {
+    margin-bottom: 0.5rem;
+}
+
+/* English Level Section */
+.barbershop-english-level {
+    margin-bottom: 2rem;
+}
+
+.barbershop-english-level p {
+    font-size: 1.4rem;
+}
+
+.barbershop-english-level .english-excellent {
+    color: #1EBBFF;
+    font-weight: bold;
+}
+
+.barbershop-english-level .english-good {
+    color: #1ECE25;
+    font-weight: bold;
+}
+
+.barbershop-english-level .english-fair {
+    color: #D7611F;
+    font-weight: bold;
+}
+
+.barbershop-english-level .english-poor {
+    color: #FF2B1E;
+    font-weight: bold;
+}
+
+/* Map Section */
+.barbershop-map {
+    margin-bottom: 2rem;
+}
+
+.barbershop-map h2 {
+    font-size: 1.8rem;
+    margin-bottom: 0.5rem;
+}
+
+.map-container {
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+/* Review Section */
+.barbershop-review {
+    margin-bottom: 2rem;
+}
+
+.barbershop-review h2 {
+    font-size: 1.8rem;
+    margin-bottom: 0.5rem;
+}
+
+.barbershop-review .review-content {
+    font-size: 1.2rem;
+    background-color: #f9f9f9;
+    padding: 15px;
+    border-radius: 10px;
+    border: 1px solid #e0e0e0;
+}
+
+/* Login Section */
+.barbershop-login {
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.barbershop-login p {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+.barbershop-login .btn {
+    display: inline-block;
+    padding: 0.75rem 1.5rem;
+    font-size: 1.2rem;
+    color: #fff;
+    background-color: #333;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.barbershop-login .btn-primary {
+    background-color: #ff645f;
+}
+
+.barbershop-login .btn-secondary {
+    background-color: #ff867c;
+}
+
+.barbershop-login .btn:hover {
+    background-color: #000;
+}
